feat: add Playwright test suite for szkrabok features
- Create tests/szkrabok/ with 3 test suites:
  * session.spec.ts - Session management (4 tests)
  * stealth.spec.ts - Stealth mode (1 test)
  * tools.spec.ts - CSS tools + workflows (4 tests)
- Use @playwright/test framework matching upstream patterns
- Custom fixtures for szkrabok MCP client setup
- All 9 Playwright tests + 8 Node tests = 17 tests passing
- Add npm scripts: test:playwright, test:pw (UI mode)
- npm test now runs both Node and Playwright suites

Benefits:
- Consistent with upstream playwright-mcp test patterns
- Better test isolation and parallelization
- MCP client integration testing
- Professional test reporting

--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "lint:fix": "eslint . --fix",
     "format": "prettier --write \"**/*.{js,json,md}\"",
     "format:check": "prettier --check \"**/*.{js,json,md}\"",
-    "test": "node --test",
+    "test": "npm run test:node && npm run test:playwright",
+    "test:node": "node --test",
+    "test:playwright": "playwright test --config=playwright.config.ts",
     "test:watch": "node --test --watch",
+    "test:pw": "playwright test --config=playwright.config.ts --ui",
     "prepare": "node scripts/setup.js"
   },
   "keywords": [
